/**
* MIT License
*
* Copyright (c) 2025 Sonardyne International Limited
*
* Permission is hereby granted, free of charge, to any person obtaining a copy
* of this software and associated documentation files (the "Software"), to deal
* in the Software without restriction, including without limitation the rights
* to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
* copies of the Software, and to permit persons to whom the Software is
* furnished to do so, subject to the following conditions:
*
* The above copyright notice and this permission notice shall be included in all
* copies or substantial portions of the Software.
*
* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
* IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
* FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
* AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
* LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
* OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
* SOFTWARE.
*/

syntax = "proto3";

import "sonardyne/api/common/data/data_direction.proto";
import "sonardyne/api/common/timestamp.proto";
import "sonardyne/api/common/unique_id.proto";

package sonardyne.api.common.ports;

// DataPortComms represents a communication event on a data port.
// It includes the unique ID of the port, the timestamp of the event,
// the direction of the data relative to the port, and the data payload.
message DataPortComms {
  sonardyne.api.common.UniqueID uid                       = 1;  // Id of the port to which the data originated or is destined.
  sonardyne.api.common.Timestamp timestamp                = 2;  // Timestamp when the data was received.
  sonardyne.api.common.data.DataDirection data_direction  = 3;  // Direction of the data relative to the port (Input for data received by the port, Output for data to be sent by the port).
  bytes data                                              = 4;  // Data payload.
}
